# wamr-test

./: .gitignore
idle/: package-lock.json  package.json
idle-exec/: CMakeLists.txt  build.sh  idle.aot
idle-exec/src/: idle.h  main.c  nativeFunc.c
idle/assembly/: index.ts
